# ldndc2nc

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  ldndc2nc-runner.py  ldndc2nc.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  update_docs.sh
.github/workflows/: ci.yml  publish-to-test-pypi.yml
docs/source/: conf.py  index.rst
ldndc2nc/: __init__.py  __main__.py  cli.py  config_handler.py  extra.py  ldndc2nc.py  variable.py
ldndc2nc/data/: ldndc2nc.conf
ldndc2nc/tests/: test_conf_processing.py  test_confighandler.py  test_extra.py  test_variable.py
tests/: test_conf_processing.py
