[metadata]
name = ldndc2nc
description-file=README.md
author = Christian Werner
author_email = christian.werner@kit.edu
url = https://www.github.com/cwerner/ldndc2nc
license = BSD 3-Clause License

[options.entry_points]
console_scripts =
    ldndc2nc=ldndc2nc.ldndc2nc:main
    

[options]
zip_safe = False
packages = find:
install_requires =
    netcdf4
    numpy
    param
    pandas
    pyyaml
    xarray

