[metadata]
name = ldndc2nc
description = LandscapeDNDC inventory postprocessor to netCDF format
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md
author = Christian Werner
author_email = christian.werner@kit.edu
url = https://www.github.com/cwerner/ldndc2nc
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development


[options.entry_points]
console_scripts =
    ldndc2nc=ldndc2nc.ldndc2nc:main

[options]
zip_safe = False
packages = find:
setup_requires =
  setuptools_scm
install_requires =
    netcdf4
    numpy
    param
    pandas
    pyyaml
    xarray

