[metadata]
name = ldndc2nc
description = LandscapeDNDC inventory postprocessor to netCDF format
long_description = file: README.md
long_description_content_type = text/markdown
description-file = README.md
author = Christian Werner
author_email = code.cwerner@gmail.com
url = https://www.github.com/cwerner/ldndc2nc
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development


[options.entry_points]
console_scripts =
    ldndc2nc=ldndc2nc.ldndc2nc:main

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    importlib_metadata
    netcdf4
    numpy
    pandas
    pyyaml
    xarray

[tool:pytest]
python_files = test_*.py
testpaths = ldndc2nc/tests

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
	# ambiguous variable name 'l'
	E741
exclude=
    .eggs
    doc

[isort]
default_section = THIRDPARTY
known_first_party = ldndc2nc
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
